fix: Improve wrap for infoboxes

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 .header {
     color: #F9FAF8;
     padding: 10px 10px;
-    width: 1000px;
+    width: 800px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -45,7 +45,7 @@ body {
 }
 
 .hero {
-    width: 1000px;
+    width: 800px;
     color: #F9FAF8;
     padding: 50px 10px; 
     display: flex;
@@ -72,28 +72,29 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 50px;    
+    gap: 25px;    
 }
 
 .card-wrapper {
+    margin: auto 10px;
     display: flex;
     justify-content: space-between;
     text-align: center;
     flex-wrap: wrap;
-    max-width: 800px;
+    max-width: 600px;
     /* gap: 20px; */
 }
 
 .card {
     flex: 0;
-    min-width: 170px;
+    margin: 10px;
+    min-width: 130px;
 }
 
 .card > img {
     width: auto;
-    min-height: 140px;
-    background-color: #e5e7eb;
-    border: 2px solid #3882f6;
+    min-height: 130px;
+    border: 3px solid #3882f6;
     border-radius: 5px;
 }
 
